src/screens/Instructor/Components/Playlist/index.css
.ip-playlist {
  position: relative;
  padding: 4.6em .2em 5em 0;
  width: 60%;
  height: 100vh;
  overflow-y: auto;
  overflow-x: hidden;
  background-color: var(--ct-ip-grey-0);
  display: block;
}
.ip-playlist-con {
  width: 100%;
  height: calc(100vh - 4.6em);
  overflow-y: auto;
  overflow-x: hidden;
  display: block;
  -webkit-box-orient: vertical;
}

/* Title */
.ip-p-title {
  /* margin: 1.5em 0; */
  padding: .5em 1em .5em 1em;
  /* position: sticky;
  top: 0; */
  /* background-color: #fcfcfc; */
  background-color: var(--ct-ip-grey-0);
  /* z-index: 1; */
}
.ip-p-pl-name {
  width: 100%;
  padding: .45em .2em;
  margin: 0 1em 0 0;
}
.ip-p-pl-name span {
  margin-left: .2em;
  font-size: 1.3em;
  color: rgb(68, 68, 68);
}
.ip-p-pl-name-edit-con input {
  font-weight: bold;
  font-size: 1.7em;
  padding: .5em 1em;
}


/* Buttons */
.ip-p-btns {
  margin: 1em 0 .5em 0;
}
.ip-p-btns-con {
  border-radius: 10px;
  padding: 0 1em;
  /* background-color: var(--ct-ip-grey-1); */
  /* justify-content: flex-end; */
}

